# krkn-chaos-coordinator

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yaml  pyproject.toml
.claude/commands/: run-scan.md
src/: main.py  models.py  reasoning.py  run_filtered.py  run_pipeline.py
src/agents/: act.py  base_agent.py  control_plane_agent.py
src/apis/: github_client.py  jira_client.py  sippy_client.py
src/coordinator/: orchestrator.py
src/filter/: chaos_filter.py  llm_config.py  llm_filter.py
src/generator/: scenario_generator.py
src/knowledge/: chromadb_store.py  component_map.py  scenario_index.py
src/ui/: web_dashboard.py
tests/fixtures/: jira_etcd_bugs.json
tests/unit/: test_chaos_filter.py  test_component_map.py  test_llm_config.py  test_models.py  test_orchestrator.py  test_scenario_index.py
